--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
 
-    <img src="/img/img_main_pumpkin.png" alt="nope, still not working." class="img_main_pumpkin">
+    <img src="img/img_main_pumpkin.png" alt="nope, still not working." class="img_main_pumpkin">
 
     <div class="mid_part">
         <div class="part_vegetables">
